@@ -318,8 +318,8 @@ class DatabaseStorageController implements EntityStorageControllerInterface {
       $query->fields('revision', $entity_revision_fields);
 
       // Compare revision id of the base and revision table, if equal then this
-      // is the current revision.
-      $query->addExpression('base.' . $this->revisionKey . ' = revision.' . $this->revisionKey, 'isCurrentRevision');
+      // is the default revision.
+      $query->addExpression('base.' . $this->revisionKey . ' = revision.' . $this->revisionKey, 'isDefaultRevision');
     }
 
     $query->fields('base', $entity_fields);
